@@ -1,8 +1,8 @@
 # the handles dir doesn't apply to windows
 if PLATFORM_WIN32
 SUBDIRS = utils io-layer monoburg os metadata cil dis \
-	arch monograph interpreter mini tests benchmark
+	arch monograph interpreter mini tests benchmark profiler
 else
 SUBDIRS = utils io-layer monoburg os metadata cil dis \
-	arch monograph interpreter mini tests benchmark handles
+	arch monograph interpreter mini tests benchmark handles profiler
 endif
